@startuml UiClassDiagram
hide circle
skinparam classAttributeIconSize 0
skinparam stereotypeFontStyle normal
title Ui Module Responsibilities

class Ui {
  -{static} uiScanner : Scanner
  -{static} LOGGER : Logger
  -{static} TIPS : TipsStorage
  --
  +{static} waitForInput() : String
  +{static} printWelcome() : void
  +{static} printError(message : String) : void
  +{static} printListOfExpenses(expenses : List<Expense>) : void
  +{static} printListOfIncomes(incomes : List<Income>) : void
  +{static} printBalance(totalIncome : double, totalExpense : double, month : YearMonth) : void
  +{static} printBudgetSet(category : ExpenseCategory, amount : double) : void
  +{static} printTips() : void
}

class TipsStorage {
  +getRandomTip() : String
}

class Expense
class Income
enum ExpenseCategory
enum IncomeCategory

Ui ..> TipsStorage : uses
Ui ..> Expense : formats
Ui ..> Income : formats
Ui ..> ExpenseCategory : uses
Ui ..> IncomeCategory : uses

@enduml
